--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,9 +1,10 @@
-# MySQL properties
-db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/my_db
-db.username=root
-db.password=root
+#Data Source
+db.driver.class=com.mysql.cj.jdbc.Driver
+db.connection.url=jdbc:mysql://localhost:3306/my_db
+db.connection.username=root
+db.connection.password=root
 
-# Hibernate properties
+# Hiber Config
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=create-drop
